# voxel-thingy-ig

./: Cargo.toml  README.md
shaders/: triangles.metal
src/: chunk.rs  main.rs  meshing.rs  shader_handling.rs
